# crefin-ml-service

./: .env.example  commands.txt  mock_data.py  pyproject.toml  train_model.py
app/: main.py
app/core/: config.py
config/: database.py  settings.py
data/: training_data.csv
models/saved/: client_risk_scores.csv  client_segmenter.joblib  clients_segmented.csv  payment_predictor_v1.joblib  payment_predictor_v2.joblib  payment_predictor_v2_metadata.joblib  revenue_forecaster.joblib  risk_scorer.joblib  risk_scorer_metadata.joblib  segment_profiles.csv  segmenter_metadata.joblib
src/ml/: feature_engineering.py  train_pay_pred_model.py  train_revenue_forecaster.py  train_risk_model.py  train_segmentation_model.py
src/ml/data/: loader.py
src/ml/features/: feature_engineering.py
src/ml/models/: client_segmenter.py  revenue_forecaster.py  risk_scorer.py
src/ml/utils/: logger.py
